Changed intertface names for more generic ones in order to reuse those for WinForms App

--- a/AgendaFrameworkApp/AgendaFrameworkApp.csproj
+++ b/AgendaFrameworkApp/AgendaFrameworkApp.csproj
@@ -56,7 +56,7 @@
     <Compile Include="InterpreterOfRemove.cs" />
     <Compile Include="InterpreterOfSearch.cs" />
     <Compile Include="InterpreterOfShow.cs" />
-    <Compile Include="IUserInterpreter.cs" />
+    <Compile Include="IUserClient.cs" />
     <Compile Include="IUserOrder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
